Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/Datos_Equifax__c.object-meta.xml
<CustomObject>
    <label>Datos Equifax</label>
    <nameField>
        <displayFormat>EQ-{0000}</displayFormat>
        <label>Nombre de Datos Equifax</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Datos Equifax</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>