Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Cartera_castigada__c.field-meta.xml
<CustomField>
    <fullName>CI_Cartera_castigada__c</fullName>
    <label>Cartera castigada</label>
    <length>50</length>
    <type>Text</type>
</CustomField>