Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Demanda_judicial__c.field-meta.xml
<CustomField>
    <fullName>CI_Demanda_judicial__c</fullName>
    <label>Demanda judicial</label>
    <length>50</length>
    <type>Text</type>
</CustomField>