Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Dias_vencidos__c.field-meta.xml
<CustomField>
    <fullName>CI_Dias_vencidos__c</fullName>
    <label>Días vencidos</label>
    <length>50</length>
    <type>Text</type>
</CustomField>