Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Fecha_corte__c.field-meta.xml
<CustomField>
    <fullName>CI_Fecha_corte__c</fullName>
    <label>Fecha corte</label>
    <length>50</length>
    <type>Text</type>
</CustomField>