Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Institucion__c.field-meta.xml
<CustomField>
    <fullName>CI_Institucion__c</fullName>
    <label>Institución</label>
    <length>50</length>
    <type>Text</type>
</CustomField>