Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_No_devenga_interes__c.field-meta.xml
<CustomField>
    <fullName>CI_No_devenga_interes__c</fullName>
    <label>No devenga interés</label>
    <length>50</length>
    <type>Text</type>
</CustomField>