Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>CI_Oportunidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Datos Equifax</relationshipLabel>
    <relationshipName>Datos_Equifax</relationshipName>
    <type>Lookup</type>
</CustomField>