Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Tipo_deudor__c.field-meta.xml
<CustomField>
    <fullName>CI_Tipo_deudor__c</fullName>
    <label>Tipo deudor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>