Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Total_vencer__c.field-meta.xml
<CustomField>
    <fullName>CI_Total_vencer__c</fullName>
    <label>Total por vencer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>