Inmob-Salesforce/force-app/main/default/objects/Datos_Equifax__c/fields/CI_Total_vencido__c.field-meta.xml
<CustomField>
    <fullName>CI_Total_vencido__c</fullName>
    <label>Total vencido</label>
    <length>50</length>
    <type>Text</type>
</CustomField>